# floci-duck

./: .dockerignore  .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.package  Makefile  README.md  docker-compose.yml  duck-test  init_resources.sh  test_floci.sh  test_http.sh  validate_results.sh
.github/workflows/: release.yml  semver.yml
src/: executor.rs  handlers.rs  main.rs  models.rs  telemetry.rs
