[package]
name = "floci-duck"
version = "0.1.1" 
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
duckdb = { version = "1.1.1", features = ["bundled", "parquet", "json", "extensions-full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.86"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
